--- a/all_reports.html
+++ b/all_reports.html
@@ -89,6 +89,8 @@
 
 <script>
 
+    let ADMIN_PASS = "";
+
     function getDrivePreviewUrl(url)
 {
     if (!url) return "";
@@ -113,14 +115,20 @@ function statusLabel(s){
     return s;
 }
 
-async function updateStatus(reportId, newStatus){
-    const res = await fetch(API_BASE + "?action=update_status", {
-        method:"POST",
-        body: JSON.stringify({
-            report_id: reportId,
-            new_status: newStatus
-        })
-    });
+async function updateStatus(reportId, newStatus)
+{
+    const res = await fetch(
+        API_BASE
+        + "?action=update_status"
+        + "&password=" + encodeURIComponent(ADMIN_PASS),
+        {
+            method:"POST",
+            body: JSON.stringify({
+                report_id: reportId,
+                new_status: newStatus
+            })
+        }
+    );
 
     const data = await res.json();
     if(!data.ok){
@@ -128,6 +136,7 @@ async function updateStatus(reportId, newStatus){
         console.error(data);
     }
 }
+
 
 function escapeHtml(s)
 {
@@ -213,9 +222,12 @@ async function saveStatus(id){
     alert("הסטטוס נשמר");
 }
 
-async function loadReports(){
+async function loadReports(password)
+{
     const status = getQueryParam("status");
-    let url = API_BASE + "?action=get_all_reports";
+    let url = API_BASE
+        + "?action=get_all_reports"
+        + "&password=" + encodeURIComponent(password);
 
     if (status){
         url += "&status=" + encodeURIComponent(status);
@@ -225,18 +237,51 @@ async function loadReports(){
     const data = await res.json();
 
     if (!data.ok){
-        document.getElementById("reports-container").innerHTML = "<p>שגיאה בטעינה</p>";
+        document.getElementById("reports-container").innerHTML =
+            "<p>שגיאה בטעינה</p>";
         return;
     }
 
-    // ⭐ מיון מהישן לחדש
     data.reports.sort((a, b) => Number(a.id) - Number(b.id));
-
     renderReports(data.reports);
 }
 
 
-loadReports();
+async function checkPasswordWithServer(pass)
+{
+    const res = await fetch(
+        API_BASE + "?action=check_password&password=" + encodeURIComponent(pass)
+    );
+
+    const data = await res.json();
+    return data.ok === true;
+}
+
+
+
+
+(async function ()
+{
+    const pass = prompt("הזן סיסמה:");
+    if (!pass)
+    {
+        alert("חובה להזין סיסמה");
+        return;
+    }
+
+    const ok = await checkPasswordWithServer(pass);
+    if (!ok)
+    {
+        alert("סיסמה שגויה");
+        return;
+    }
+
+    ADMIN_PASS = pass;
+    loadReports(ADMIN_PASS);
+
+})();
+
+
 </script>
 
 </div>
