--- a/report_step2.html
+++ b/report_step2.html
@@ -119,7 +119,8 @@ const form = document.getElementById("step2-form");
 window.addEventListener("DOMContentLoaded", () =>
 {
     /* אם עברנו לדירה אחרת – לא לשחזר נתונים ישנים */
-    const currentAptId = sessionStorage.getItem("report_apartment_id");
+    const params = new URLSearchParams(window.location.search);
+    const currentAptId = params.get("apartment_id");          /* מגיע מה-URL */
     const lastAptIdForStep2 = sessionStorage.getItem("step2_apartment_id");
 
     if (currentAptId && lastAptIdForStep2 && currentAptId !== lastAptIdForStep2)
@@ -134,6 +135,7 @@ window.addEventListener("DOMContentLoaded", () =>
     {
         sessionStorage.setItem("step2_apartment_id", currentAptId);
     }
+
 
     const savedItem = sessionStorage.getItem("report_item");
     const savedDesc = sessionStorage.getItem("report_description");
